--- a/Calculadora/Cliente/Vistas/cliente.html
+++ b/Calculadora/Cliente/Vistas/cliente.html
@@ -13,5 +13,6 @@
         <input type="submit" name="action" value="*"/>
         <input type="submit" name="action" value="/"/>
     </form>
+<p> Resultado: {{ string_variable }} </p>
 </body>
 </html>
